--- a/polybar/config
+++ b/polybar/config
@@ -1,175 +1,319 @@
-;
-;             _       _                                   __ _       
-; _ __   ___ | |_   _| |__   __ _ _ __    ___ ___  _ __  / _(_) __ _ 
-;| '_ \ / _ \| | | | | '_ \ / _` | '__|  / __/ _ \| '_ \| |_| |/ _` |
-;| |_) | (_) | | |_| | |_) | (_| | |    | (_| (_) | | | |  _| | (_| |
-;| .__/ \___/|_|\__, |_.__/ \__,_|_|     \___\___/|_| |_|_| |_|\__, |
-;|_|            |___/                                          |___/ 
-
-
-;*********************************************************
-;
-;                          COLORS
-;
-;**********************************************************
 [colors]
-; Base colors from .Xresources
-bg          =  ${xrdb:background}
-bg-alt      =  #c5c5c5
-fg          =  ${xrdb:foreground}
-fg-alt      =  ${xrdb:color8}
-red         =  ${xrdb:color1}
-red-alt     =  ${xrdb:color9}
-green       =  ${xrdb:color2}
-green-alt   =  ${xrdb:color10}
-yellow      =  ${xrdb:color3}
-yellow-alt  =  ${xrdb:color11}
-blue        =  ${xrdb:color4}
-blue-alt    =  ${xrdb:color12}
-magenta     =  ${xrdb:color5}
-magenta-alt =  ${xrdb:color13}
-cyan        =  ${xrdb:color6}
-cyan-alt    =  ${xrdb:color14}
-white       =  ${xrdb:color7}
-white-alt   =  ${xrdb:color15}
+;background = ${xrdb:color0:#222}
+background = #2f343f
+background-alt = #2f343f
+;foreground = ${xrdb:color7:#222}
+foreground = #dfdfdf
+foreground-alt = #555
+primary = #ffb52a
+secondary = #e60053
+alert = #bd2c40
 
-
-
-;**********************************************************
-;
-;                       GLOBAL WM SETTINGS
-;
-;**********************************************************
-[global/wm]
-margin-top = 0
-margin-bottom = 0
-
-
-;*********************************************************
-;
-;                       BAR SETTINGS
-;
-;********************************************************
 [bar/top]
-monitor   = ${env:MONITOR:LVDS1}
-bottom    = false
-width     = 1346
-height    = 30
-offset-x  = 10
-offset-y  = 10
-override-redirect = false
+;monitor = ${env:MONITOR:HDMI-1}
+width = 100%
+height = 30
+;offset-x = 10%
+;offset-y = 0
+radius = 0
+fixed-center = true
 
-background = ${colors.bg}
-foreground = ${colors.fg}
+background = ${colors.background}
+foreground = ${colors.foreground}
 
-;border-bottom-size = 1
-;border-top-size = 3
-;border-top-color = ${colors.green}
-;border-bottom-color = ${colors.bg-alt}
+line-size = 3
+line-color = #f00
 
-spacing = 0
+border-size = 0
+border-color = #00000000
+
 padding-left = 0
-padding-right = 0
+padding-right = 2
+
+
 module-margin-left = 0
-module-margin-right = 0
+module-margin-right = 2
 
-font-0 = Iosevka Slab:size=10;3
-font-1 = Material Icons:antialia=false:size=12;5
-;font-2 = Siji:antialias=false:size=12;3
+font-0 = Terminus (TTF):pixelsize=9;1
+font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
+font-2 = siji:pixelsize=10;1
 
-modules-left = bspwm uptime
-modules-center = date
-modules-right = updates mail temperature cpu memory wlan battery
+modules-left = i3
+modules-center = xwindow
+modules-right = volume memory cpu eth temperature date
 
+tray-position = right
+tray-padding = 2
+;tray-transparent = true
+;tray-background = #0063ff
 
-;**********************************************************
-;
-;                   MODULES SETTINGS
-;
-;**********************************************************
+;wm-restack = bspwm
+;wm-restack = i3
 
-; [module/i3]
-; type = internal/i3
-; ;ws-icon-[0-9]+ = label;icon
-; ws-icon-0 = 1;
-; ws-icon-1 = 2;
-; ws-icon-2 = 3;
-; ws-icon-3 = 4;
-; ws-icon-4 = 5;
-; ws-icon-5 = 6;
-; ws-icon-6 = 7;
-; ws-icon-7 = 8;
-; ws-icon-8 = 9;
-; ws-icon-9 = 10;
-; ;ws-icon-default = 
+;override-redirect = true
 
-; strip-wsnumbers = true
+;scroll-up = bspwm-desknext
+;scroll-down = bspwm-deskprev
 
-; label-focused = "%icon%"
-; label-focused-foreground = ${colors.blue}
-; label-focused-background = ${colors.bg-alt}
-; label-focused-padding = 1
+;scroll-up = i3wm-wsnext
+;scroll-down = i3wm-wsprev
 
-; label-unfocused = "%icon%"
-; label-unfocused-padding = 1
-; ;label-unfocused-foreground = ${colors.blue-alt}
-; label-unfocused-background = ${colors.bg-alt}
+cursor-click = pointer
+cursor-scroll = true
 
-; label-urgent = "%icon%"
-; label-urgent-foreground = ${colors.magenta}
-; label-urgent-background = ${colors.bg-alt}
-; label-urgent-padding = 1
+[module/player-mpris-simple]
+type = custom/script
+exec = ~/current_track.sh
+format-underline = #ffffff
+;label = ♫
+interval = 3
+click-left = playerctl previous
+click-right = playerctl next
+click-middle = playerctl play-pause<Paste>
 
-; label-visible = "%icon%"
-; ;label-visible-foreground = ${colors.fg-alt}
-; label-visible-background = ${colors.bg-alt}
-; label-visible-padding = 1
+[module/xwindow]
+type = internal/xwindow
+label = %title% 
+;0:30:...%
+
+[module/xkeyboard]
+type = internal/xkeyboard
+blacklist-0 = num lock
+
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
+format-prefix-underline = ${colors.secondary}
+
+label-layout = %layout%
+label-layout-underline = ${colors.secondary}
+
+label-indicator-padding = 2
+label-indicator-margin = 1
+label-indicator-background = ${colors.secondary}
+label-indicator-underline = ${colors.secondary}
+
+[module/filesystem]
+type = internal/fs
+interval = 25
+
+mount-0 = /
+
+label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
+label-unmounted = %mountpoint% not mounted
+label-unmounted-foreground = ${colors.foreground-alt}
+
+[module/bspwm]
+type = internal/bspwm
+
+label-focused = %index%
+label-focused-background = ${colors.background-alt}
+label-focused-underline= ${colors.primary}
+label-focused-padding = 2
+
+label-occupied = %index%
+label-occupied-padding = 2
+
+label-urgent = %index%!
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 2
+
+label-empty = %index%
+label-empty-foreground = ${colors.foreground-alt}
+label-empty-padding = 2
+
+[module/i3]
+type = internal/i3
+format = <label-state> <label-mode>
+index-sort = true
+wrapping-scroll = false
+
+; Only show workspaces on the same output as the bar
+;pin-workspaces = true
+
+label-mode-padding = 2
+label-mode-foreground = #000
+label-mode-background = ${colors.primary}
+
+; focused = Active workspace on focused monitor
+label-focused = %index%
+label-focused-background = ${module/bspwm.label-focused-background}
+label-focused-underline = #ffffff
+label-focused-padding = ${module/bspwm.label-focused-padding}
+
+; unfocused = Inactive workspace on any monitor
+label-unfocused = %index%
+label-unfocused-padding = ${module/bspwm.label-occupied-padding}
+
+; visible = Active workspace on unfocused monitor
+label-visible = %index%
+label-visible-background = ${self.label-focused-background}
+label-visible-underline = ${self.label-focused-underline}
+label-visible-padding = ${self.label-focused-padding}
+
+; urgent = Workspace with urgency hint set
+label-urgent = %index%
+label-urgent-background = ${module/bspwm.label-urgent-background}
+label-urgent-padding = ${module/bspwm.label-urgent-padding}
+
+[module/mpd]
+type = internal/mpd
+format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
+
+icon-prev = 
+icon-stop = 
+icon-play = 
+icon-pause = 
+icon-next = 
+
+label-song-maxlen = 25
+label-song-ellipsis = true
+
+[module/xbacklight]
+type = internal/xbacklight
+
+format = <label> <bar>
+label = BL
+
+bar-width = 10
+bar-indicator = |
+bar-indicator-foreground = #ff
+bar-indicator-font = 2
+bar-fill = ─
+bar-fill-font = 2
+bar-fill-foreground = #9f78e1
+bar-empty = ─
+bar-empty-font = 2
+bar-empty-foreground = ${colors.foreground-alt}
+
+[module/backlight-acpi]
+inherit = module/xbacklight
+type = internal/backlight
+card = intel_backlight
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.yellow}
-label = "%percentage% "
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = #ffffff
+label = %percentage:2%%
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.cyan}
-label = "%percentage_used% "
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = #ffffff
+label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
-interface = wlp1s0
+interface = net1
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
+format-connected-underline = #9f78e1
+label-connected = %essid%
 
-label-connected = "%essid% "
-;label-connected-foreground = ${colors.fg}
+format-disconnected =
+;format-disconnected = <label-disconnected>
+;format-disconnected-underline = ${self.format-connected-underline}
 ;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.fg-alt}
+;label-disconnected-foreground = ${colors.foreground-alt}
 
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-ramp-signal-foreground = ${colors.magenta-alt}
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
+ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
 interface = enp2s0
 interval = 3.0
 
+format-connected-underline = #55aa55
 format-connected-prefix = " "
-format-connected-foreground-foreground = ${colors.fg-alt}
+format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 
-;format-disconnected-underline = ${self.format-connected-underline}
+format-disconnected =
+;format-disconnected = <label-disconnected>
+format-disconnected-underline = #ef5f5f
 ;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.fg}
+;label-disconnected-foreground = ${colors.foreground-alt}
+
+[module/date]
+type = internal/date
+interval = 5
+
+date =
+date-alt = " %Y-%m-%d"
+
+time = %H:%M
+time-alt = %H:%M:%S
+
+format-prefix = 
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = #ffffff
+
+label = %date% %time%
+
+[module/volume]
+type = internal/volume
+
+format-volume = <label-volume> <bar-volume>
+label-volume = VOL
+label-volume-foreground = ${root.foreground}
+
+format-muted-prefix = " "
+format-muted-foreground = ${colors.foreground-alt}
+label-muted = sound muted
+
+bar-volume-width = 10
+bar-volume-foreground-0 = #55aa55
+bar-volume-foreground-1 = #55aa55
+bar-volume-foreground-2 = #55aa55
+bar-volume-foreground-3 = #55aa55
+bar-volume-foreground-4 = #55aa55
+bar-volume-foreground-5 = #f5a70a
+bar-volume-foreground-6 = #ff5555
+bar-volume-gradient = false
+bar-volume-indicator = |
+bar-volume-indicator-font = 2
+bar-volume-fill = ─
+bar-volume-fill-font = 2
+bar-volume-empty = ─
+bar-volume-empty-font = 2
+bar-volume-empty-foreground = ${colors.foreground-alt}
+
+[module/battery]
+type = internal/battery
+battery = BAT0
+adapter = ADP1
+full-at = 98
+
+format-charging = <animation-charging> <label-charging>
+format-charging-underline = #ffb52a
+
+format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-underline = ${self.format-charging-underline}
+
+format-full-prefix = " "
+format-full-prefix-foreground = ${colors.foreground-alt}
+format-full-underline = ${self.format-charging-underline}
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-foreground = ${colors.foreground-alt}
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-foreground = ${colors.foreground-alt}
+animation-charging-framerate = 750
 
 [module/temperature]
 type = internal/temperature
@@ -177,71 +321,57 @@ thermal-zone = 0
 warn-temperature = 60
 
 format = <ramp> <label>
+format-underline = #ffffff
 format-warn = <ramp> <label-warn>
+format-warn-underline = ${self.format-underline}
 
-label = "%temperature% "
-label-warn = "%temperature% "
-label-warn-foreground = ${colors.red}
+label = %temperature%
+label-warn = %temperature%
+label-warn-foreground = ${colors.secondary}
 
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-foreground = ${colors.magenta}
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-foreground = ${colors.foreground-alt}
 
-[module/menu]
-type = custom/text
+[module/powermenu]
+type = custom/menu
 
-content = "  "
-content-foreground = ${colors.white}
-content-background = ${colors.magenta}
-click-left = ~/.config/popups/todo/todo
+expand-right = true
 
-;[module/mail]
-;type = custom/script
-;interval = 1200
-;format = "<label> "
-;format-prefix = " "
-;format-prefix-foreground = ${colors.red}
-;exec = ~/.config/polybar/mail
-;exec-if = "ping -q -w 2 -c 1 8.8.8.8 > /dev/null"
+format-spacing = 1
 
-[module/date]
-type = custom/script
-interval = 60
-exec = date +"%H:%M"
-click-left = ~/.config/popups/calendar/pop_cal
+label-open = 
+label-open-foreground = ${colors.secondary}
+label-close =  cancel
+label-close-foreground = ${colors.secondary}
+label-separator = |
+label-separator-foreground = ${colors.foreground-alt}
 
-[module/uptime]
-type = custom/script
-interval = 1200
-format = "<label> "
-format-prefix = "  "
-format-prefix-foreground = ${colors.cyan}
-exec = ~/.config/polybar/uptime
+menu-0-0 = reboot
+menu-0-0-exec = menu-open-1
+menu-0-1 = power off
+menu-0-1-exec = menu-open-2
 
-[module/mpd]
-type = custom/script
-interval = 2
-format = "<label>"
-format-prefix = " "
-format-prefix-foreground = ${colors.red}
-exec = ~/.config/polybar/mpd
+menu-1-0 = cancel
+menu-1-0-exec = menu-open-0
+menu-1-1 = reboot
+menu-1-1-exec = sudo reboot
 
-[module/power-label]
-type = custom/text
-content = "  "
+menu-2-0 = power off
+menu-2-0-exec = sudo poweroff
+menu-2-1 = cancel
+menu-2-1-exec = menu-open-0
 
-content-foreground = ${colors.bg}
-content-background = ${colors.magenta-alt}
-click-left = bash ~/.config/popups/power/power
+[settings]
+screenchange-reload = true
+;compositing-background = xor
+;compositing-background = screen
+;compositing-foreground = source
+;compositing-border = over
 
-[module/updates]
-type = custom/script
-interval = 86400
-format = "<label>"
-format-prefix = "  "
-format-prefix-foreground = ${colors.blue}
-exec = ~/.config/polybar/pkg 
-exec-if = "ping -q -w 2 -c 1 8.8.8.8 > /dev/null"
+[global/wm]
+margin-top = 5
+margin-bottom = 5
 
 ; vim:ft=dosini
